day2-training/demo/04-3tier-app/k8s/02-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-backend
  labels:
    app: demo-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-backend
  template:
    metadata:
      labels:
        app: demo-backend
    spec:
      containers:
      - name: demo-backend
        # Note the specific tag, we'll build this locally in minikube
        image: demo-backend:v1
        imagePullPolicy: Never
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: demo-backend
spec:
  type: ClusterIP
  selector:
    app: demo-backend
  ports:
  - port: 3000
    targetPort: 3000
