day2-training/demo/04-3tier-app/k8s/03-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-frontend
  labels:
    app: demo-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-frontend
  template:
    metadata:
      labels:
        app: demo-frontend
    spec:
      containers:
      - name: demo-frontend
        # Note the specific tag, we'll build this locally in minikube
        image: demo-frontend:v1
        imagePullPolicy: Never
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: demo-frontend
spec:
  type: NodePort
  selector:
    app: demo-frontend
  ports:
  - port: 80
    targetPort: 80
    # NodePort will be randomly assigned from 30000-32767
